--- a/index.html
+++ b/index.html
@@ -4,48 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Discussion App</title>
-		<style>
-			* {
-				margin: 0px;
-				box-sizing: border-box;
-			}
-			header {
-				background-color: #008e9b;
-				color: #fff;
-				text-align: left;
-				padding: 1rem;
-				margin-bottom: 2rem;
-			}
-			.container {
-				display: flex;
-			}
-			.display {
-				width: 30%;
-				padding: 2rem;
-				align-content: right;
-			}
-			.enter {
-				width: 70%;
-				display: flex;
-				padding: 2rem;
-				flex-direction: column;
-			}
-			.ipForm {
-				display: flex;
-				flex-direction: column;
-			}
-			.btn {
-				background-color: #008e9b;
-				color: #fff;
-				padding: 0.5rem;
-				border: none;
-				border-radius: 5px;
-				cursor: pointer;
-				text-align: center;
-			}
-		</style>
+		<link rel="stylesheet" href="./stylesheet/style.css" />
 	</head>
-	<body>
+	<body onload="load()">
 		<div class="head">
 			<header>
 				<h1>Discussion Portal</h1>
@@ -62,24 +23,41 @@
 						placeholder="Search questions"
 					/>
 				</div>
+
+				<div class="qlist" id="qlist">
+					<!-- <div id="qid0" class="quest">
+						<h2 id="subid0" class="sub">Sample 1</h2>
+						<p id="pid0" class="qpara">This is a sample Question asked</p>
+					</div>
+					<div id="qid1" class="quest">
+						<h2 id="subid1" class="sub">Sample 2</h2>
+						<p id="pid1" class="qpara">This is a sample Question asked</p>
+					</div>
+					<div id="qid1" class="quest">
+						<h2 id="subid1" class="sub">Sample 2</h2>
+						<p id="pid1" class="qpara">This is a sample Question asked</p>
+					</div> -->
+				</div>
 			</div>
 			<div class="enter">
 				<h1>Welcome to Discussion Portal</h1>
 				<p>Enter a subject and question to get started</p>
 
 				<div class="input">
-					<form class="ipForm">
-						<input
-							type="text"
-							name="subject"
-							id="subject"
-							placeholder="Subject"
-						/>
-						<textarea name="" id="" cols="30" rows="10"></textarea>
-						<input class="btn" name="submit" id="submit" value="Submit" />
-					</form>
+					<input
+						type="text"
+						name="subject"
+						id="subject"
+						placeholder="Subject"
+					/>
+					<textarea name="question" id="qtext" cols="30" rows="10"></textarea>
+					<button class="btn" name="submit" id="submit" value="Submit">
+						Submit
+					</button>
 				</div>
 			</div>
 		</div>
+
+		<script src="./scripts/script.js"></script>
 	</body>
 </html>
