--- a/index.html
+++ b/index.html
@@ -73,8 +73,19 @@
 						Resolve
 					</button>
 				</div>
+				<div class="preRes">
+					<h4>Responses</h4>
+					<table id="table" class="rtable">
+						<tr>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th></th>
+						</tr>
+					</table>
+				</div>
 				<div class="res">
-					<h4>Response</h4>
+					<h4>Add Your Responses</h4>
 					<div class="responseFrom">
 						<input
 							type="text"
@@ -86,6 +97,7 @@
 						<textarea
 							name="comment"
 							id="comment"
+							placeholder="Add your comment"
 							cols="30"
 							rows="10"
 							class="textResponse"
