--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<div class="container">
 			<div class="display">
 				<div class="search">
-					<button class="btn">New Question form</button>
+					<button class="btn" onclick="displayQForm()">
+						New Question form
+					</button>
 					<input
 						type="text"
 						name="search"
@@ -75,14 +77,52 @@
 				</div>
 				<div class="preRes">
 					<h4>Responses</h4>
-					<table id="table" class="rtable">
-						<tr>
-							<th></th>
-							<th></th>
-							<th></th>
-							<th></th>
-						</tr>
-					</table>
+					<div id="table" class="rtable">
+						<!-- <div class="row">
+							<div class="response">
+								<h3>seri</h3>
+								<p>fjsduifdun</p>
+							</div>
+							<p>Score: 0</p>
+							<button
+								class="upvote"
+								onclick="onUpvote(1, 0)"
+								fdprocessedid="6sfrb"
+							>
+								<img src="./img/upvote.png" /></button
+							><button
+								class="downvote"
+								onclick="onDownvote(1, 0)"
+								fdprocessedid="qupm7i"
+							>
+								<img src="./img/downvote.png" /></button
+							><button class="fav" onclick="onFav(1, 0)" fdprocessedid="iu3wxd">
+								<img src="./img/fav.png" />
+							</button>
+						</div>
+						<div class="row">
+							<div class="response">
+								<h3>sam</h3>
+								<p>jnfhsadjfkf</p>
+							</div>
+							<p>Score: 0</p>
+							<button
+								class="upvote"
+								onclick="onUpvote(1, 1)"
+								fdprocessedid="4b7tac"
+							>
+								<img src="./img/upvote.png" /></button
+							><button
+								class="downvote"
+								onclick="onDownvote(1, 1)"
+								fdprocessedid="7g7r"
+							>
+								<img src="./img/downvote.png" /></button
+							><button class="fav" onclick="onFav(1, 1)" fdprocessedid="0biehn">
+								<img src="./img/fav.png" />
+							</button>
+						</div> -->
+					</div>
 				</div>
 				<div class="res">
 					<h4>Add Your Responses</h4>
