Adding to Previous Responses

--- a/index.html
+++ b/index.html
@@ -77,52 +77,7 @@
 				</div>
 				<div class="preRes">
 					<h4>Responses</h4>
-					<div id="table" class="rtable">
-						<!-- <div class="row">
-							<div class="response">
-								<h3>seri</h3>
-								<p>fjsduifdun</p>
-							</div>
-							<p>Score: 0</p>
-							<button
-								class="upvote"
-								onclick="onUpvote(1, 0)"
-								fdprocessedid="6sfrb"
-							>
-								<img src="./img/upvote.png" /></button
-							><button
-								class="downvote"
-								onclick="onDownvote(1, 0)"
-								fdprocessedid="qupm7i"
-							>
-								<img src="./img/downvote.png" /></button
-							><button class="fav" onclick="onFav(1, 0)" fdprocessedid="iu3wxd">
-								<img src="./img/fav.png" />
-							</button>
-						</div>
-						<div class="row">
-							<div class="response">
-								<h3>sam</h3>
-								<p>jnfhsadjfkf</p>
-							</div>
-							<p>Score: 0</p>
-							<button
-								class="upvote"
-								onclick="onUpvote(1, 1)"
-								fdprocessedid="4b7tac"
-							>
-								<img src="./img/upvote.png" /></button
-							><button
-								class="downvote"
-								onclick="onDownvote(1, 1)"
-								fdprocessedid="7g7r"
-							>
-								<img src="./img/downvote.png" /></button
-							><button class="fav" onclick="onFav(1, 1)" fdprocessedid="0biehn">
-								<img src="./img/fav.png" />
-							</button>
-						</div> -->
-					</div>
+					<div id="table" class="rtable"></div>
 				</div>
 				<div class="res">
 					<h4>Add Your Responses</h4>
