--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<div class="ques">
 					<h4>Question</h4>
 					<div class="selectedQ" id="selectedQ"></div>
-					<button class="btn shr" name="submit" id="resolve" value="Submit">
+					<button class="btn shr res" name="submit" id="resolveBtn" value="Submit">
 						Resolve
 					</button>
 				</div>
